force-app/main/default/objects/DynamicRelatedList_Object__mdt/DynamicRelatedList_Object__mdt.object-meta.xml
<CustomObject>
    <label>DynamicRelatedList Object</label>
    <pluralLabel>DynamicRelatedList Object</pluralLabel>
</CustomObject>