force-app/main/default/objects/DynamicRelatedList_Object__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will store whether the metadata is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>