force-app/main/default/objects/DynamicRelatedList_Object__mdt/fields/DynamicRelatedList__c.field-meta.xml
<CustomField>
    <fullName>DynamicRelatedList__c</fullName>
    <description>This field will capture the related list where the data needs to be displayed.</description>
    <inlineHelpText>This field will capture the related list where the data needs to be displayed.</inlineHelpText>
    <label>DynamicRelatedList</label>
    <referenceTo>DynamicRelatedList__mdt</referenceTo>
    <relationshipName>DynamicRelatedList_Data</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>