force-app/main/default/objects/DynamicRelatedList_Object__mdt/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <label>Filter Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>