force-app/main/default/objects/DynamicRelatedList_Object__mdt/fields/Query_Binding_Variables__c.field-meta.xml
<CustomField>
    <fullName>Query_Binding_Variables__c</fullName>
    <label>Query Binding Variables</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>